--- a/README.adoc
+++ b/README.adoc
@@ -25,5 +25,6 @@ To run your application:
 * https://stackoverflow.com/questions/tagged/vert.x?sort=newest&pageSize=15[Vert.x Stack Overflow]
 * https://groups.google.com/forum/?fromgroups#!forum/vertx[Vert.x User Group]
 * https://discord.gg/6ry7aqPWXy[Vert.x Discord]
+* https://hibernate.org/reactive/documentation/2.4/reference/html_single[Hibernate Reactive 2.4.2.Final Reference Documentation]
 
 
