--- a/README.adoc
+++ b/README.adoc
@@ -2,6 +2,10 @@
 
 image:https://img.shields.io/badge/vert.x-4.5.10-purple.svg[link="https://vertx.io"]
 
+== Documentation
+https://nebesnayaa.github.io/javaTeamProject/[Click the link]
+
+
 == Building
 
 To launch your tests:
